# gitignore

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
src/: api.rs  cli.rs  cli.yml  error.rs  lib.rs  main.rs
