[package]
name = "gitignore"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "2.33.3", features = ["yaml"] }
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
