[package]
name = "gitignore"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "4", features = ["derive"] }
reqwest = "0.12"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_size = "0.3.2"
